--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/Estilos.css">
+    <script src="js/saludar.js"></script>
 </head>
 <body>
     <h1>BIENVENIDO AL SENA</h1>
     <p>Estamos en ADSI 2450159</p>
     <p>Mejorando Git</p>
+
+    <input type="button" onclick="saludar()" value="Vamos que vamos!!!">
 </body>
 </html>
